--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -41,7 +41,7 @@ stages:
           - task: Cache@2
             inputs:
               key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
-              path: $(NPM_CACHE_FOLDER)
+              path: "$(Build.SourcesDirectory)/node_modules"
               cacheHitVar: NPM_CACHE_RESTORED
             displayName: "Cache Npm Dependencies"
 
