--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -41,8 +41,8 @@ stages:
           - task: Cache@2
             inputs:
               key: 'npm | "$(Agent.OS)" | package-lock.json'
-              restoreKeys: |
-                npm | "$(Agent.OS)"
+              # restoreKeys: |
+              #   npm | "$(Agent.OS)"
               path: $(NPM_CACHE_FOLDER)
               cacheHitVar: NPM_CACHE_RESTORED
             displayName: "Cache Npm Dependencies"
