--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -40,7 +40,7 @@ stages:
 
           - task: Cache@2
             inputs:
-              key: 'npm | "$(Agent.OS)" | package-lock.json'
+              key: "**/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json"
               # restoreKeys: |
               #   npm | "$(Agent.OS)"
               path: $(NPM_CACHE_FOLDER)
@@ -51,7 +51,7 @@ stages:
           - script: |
               npm install -g @angular/cli@${{ variables.angularCliVersion}}
               npm ci
-            condition: ne(variables.NPM_CACHE_RESTORED, 'true')
+            #condition: ne(variables.NPM_CACHE_RESTORED, 'true')
             displayName: "Angular CLI ${{ variables.angularCliVersion}} and Install dependencies"
 
           - script: ${{ variables.appBuildCommandProd }}
