--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -23,7 +23,7 @@ variables:
   appBuildCommandDev: "npm run build:mfe-host -- --configuration=development"
   appBuildCommandProd: "npm run build:mfe-host -- --configuration=production"
   tag: $(Build.BuildId)
-  NPM_CACHE_FOLDER: "$(Build.SourcesDirectory)/node_modules"
+  NPM_CACHE_FOLDER: $(Pipeline.Workspace)/.npm
 
 stages:
   - stage: Build
