--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -51,7 +51,7 @@ stages:
           - script: |
               npm install -g @angular/cli@${{ variables.angularCliVersion}}
               npm ci
-            condition: ne(variables.NPM_CACHE_RESTORED, 'true')
+            #condition: ne(variables.NPM_CACHE_RESTORED, 'true')
             displayName: "Angular CLI ${{ variables.angularCliVersion}} and Install dependencies"
 
           - script: ${{ variables.appBuildCommandProd }}
