--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -60,7 +60,7 @@ stages:
             env:
               MS_API_URL: $(MS_API_URL)
               
-          # archive and publish artifacts
+          # archive build artifacts
           - task: ArchiveFiles@2
             displayName: Archive Build Artifacts
             inputs:
