--- a/projects/mfe-auth/azure-pipelines-mfe-auth.yml
+++ b/projects/mfe-auth/azure-pipelines-mfe-auth.yml
@@ -60,12 +60,19 @@ stages:
             env:
               MS_API_URL: $(MS_API_URL)
 
-          # archive build artifacts
+          # Archive build artifacts
           - task: ArchiveFiles@2
             displayName: Archive Build Artifacts
             inputs:
-              rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist/${{variables.appPath}}"
+              rootFolderOrFile: "$(System.DefaultWorkingDirectory)/dist"
               includeRootFolder: false
               archiveType: "zip"
-              archiveFile: "$(Build.ArtifactStagingDirectory)/${{variables.appArtifactName}}-$(Build.BuildId).zip"
+              archiveFile: "$(Build.ArtifactStagingDirectory)/build/$(Build.BuildId).zip"
               replaceExistingArchive: true
+
+          # Publish build artifacts
+          - task: PublishBuildArtifacts@1
+            displayName: Publish Build Artifacts
+            inputs:
+              pathtoPublish: "$(Build.ArtifactStagingDirectory)/build/$(Build.BuildId).zip"
+              artifactName: "drop"
