--- a/azure-pipelines/azure-pipelines-mfe-auth.yml
+++ b/azure-pipelines/azure-pipelines-mfe-auth.yml
@@ -6,23 +6,31 @@ trigger:
       - fix/*
   paths:
     include:
-      - "$(appArtifactName)/*"
+      - "mfe-host/*"
 
 pool:
   vmImage: $(vmImageName)
 
+variables:
+  - template: variables-template
+    parameters:
+      appName: "mfe-host"
+      appArtifactName: "mfe-host"
+      appArtifactPath: "mfe-host"
+      environmentName: "mfe-host"
+
 stages:
   - template: build-mfe.yml
     parameters:
-      stageName: build-${{ parameters.appArtifactName }}
-      stageDisplayName: Build and publish artifact ${{ parameters.appName }}
+      stageName: build-${{ variables.appArtifactName }}
+      stageDisplayName: Build and publish artifact ${{ variables.appName }}
 
   - template: deploy-environment-function-type.yml
     parameters:
-      stageName: dev-${{ parameters.appArtifactName }}
-      stageDisplayName: Dev environment ${{ parameters.appName }}
+      stageName: dev-${{ variables.appArtifactName }}
+      stageDisplayName: Dev environment ${{ variables.appName }}
 
   - template: deploy-environment-web-app-type.yml
     parameters:
-      stageName: deploy-${{ parameters.appArtifactName }}
-      stageDisplayName: Deploy stage ${{ parameters.appName }}
+      stageName: deploy-${{ variables.appArtifactName }}
+      stageDisplayName: Deploy stage ${{ variables.appName }}
