--- a/azure-pipelines/variables-template.yml
+++ b/azure-pipelines/variables-template.yml
@@ -1,3 +1,17 @@
+parameters:
+  - name: appName
+    type: string
+    default: "mfe-host"
+  - name: appArtifactName
+    type: string
+    default: "mfe-host"
+  - name: appArtifactPath
+    type: string
+    default: "mfe-host"
+  - name: environmentName
+    type: string
+    default: "mfe-host"
+
 variables:
   nodeVersion: "22.x"
   angularCliVersion: "19.2.10"
@@ -9,11 +23,7 @@ variables:
   NPM_CACHE_KEYS: 'npm | "$(Agent.OS)" | package-lock.json | **/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json'
   azureSubscription: "mfe-host"
   vmImageName: "ubuntu-latest"
-
-stages:
-  - template: azure-pipelines-mfe-auth.yml
-    parameters:
-      appName: "mfe-host"
-      appArtifactName: "mfe-host"
-      appArtifactPath: "mfe-host"
-      environmentName: "mfe-host"
+  appName: ${{ parameters.appName }}
+  appArtifactName: ${{ parameters.appArtifactName }}
+  appArtifactPath: ${{ parameters.appArtifactPath }}
+  environmentName: ${{ parameters.environmentName }}
