--- a/azure-pipelines/azure-pipelines-mfe-auth.yml
+++ b/azure-pipelines/azure-pipelines-mfe-auth.yml
@@ -12,7 +12,7 @@ pool:
   vmImage: $(vmImageName)
 
 variables:
-  - template: variables-template
+  - template: templates/variables-template
     parameters:
       appName: "mfe-host"
       appArtifactName: "mfe-host"
@@ -20,17 +20,17 @@ variables:
       environmentName: "mfe-host"
 
 stages:
-  - template: build-mfe.yml
+  - template: templates/build-template.yml
     parameters:
       stageName: build-${{ variables.appArtifactName }}
       stageDisplayName: Build and publish artifact ${{ variables.appName }}
 
-  - template: deploy-environment-function-type.yml
+  - template: templates/deploy-function-type-template.yml
     parameters:
       stageName: dev-${{ variables.appArtifactName }}
       stageDisplayName: Dev environment ${{ variables.appName }}
 
-  - template: deploy-environment-web-app-type.yml
+  - template: templates/deploy-web-app-type-template.yml
     parameters:
       stageName: deploy-${{ variables.appArtifactName }}
       stageDisplayName: Deploy stage ${{ variables.appName }}
