--- a/azure-pipelines/azure-pipelines-mfe-auth.yml
+++ b/azure-pipelines/azure-pipelines-mfe-auth.yml
@@ -25,12 +25,12 @@ stages:
       stageName: build-${{ variables.appArtifactName }}
       stageDisplayName: Build and publish artifact ${{ variables.appName }}
 
-  - template: templates/deploy-function-type-template.yml
-    parameters:
-      stageName: dev-${{ variables.appArtifactName }}
-      stageDisplayName: Dev environment ${{ variables.appName }}
+  # - template: templates/deploy-function-type-template.yml
+  #   parameters:
+  #     stageName: dev-${{ variables.appArtifactName }}
+  #     stageDisplayName: Dev environment ${{ variables.appName }}
 
-  - template: templates/deploy-web-app-type-template.yml
-    parameters:
-      stageName: deploy-${{ variables.appArtifactName }}
-      stageDisplayName: Deploy stage ${{ variables.appName }}
+  # - template: templates/deploy-web-app-type-template.yml
+  #   parameters:
+  #     stageName: deploy-${{ variables.appArtifactName }}
+  #     stageDisplayName: Deploy stage ${{ variables.appName }}
