--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -9,7 +9,7 @@ stages:
         steps:
           # Install node
           - task: NodeTool@0
-            displayName: "Install Node.js"
+            displayName: "Install Node.js $(nodeVersion)"
             inputs:
               versionSpec: $(nodeVersion)
 
