--- a/azure-pipelines/templates/variables-template.yml
+++ b/azure-pipelines/templates/variables-template.yml
@@ -11,13 +11,16 @@ parameters:
   - name: ENVIRONMENT_NAME
     type: string
     default: "mfe-host"
+  - name: BUILD_PREFIX_COMMAND
+    type: string
+    default: "mfe-host"
 
 variables:
   nodeVersion: "22.x"
   angularCliVersion: "19.2.10"
   npmRegistryURL: "https://registry.npmjs.org/"
-  appBuildCommandDev: "npm run build:mfe-host -- --configuration=development"
-  appBuildCommandProd: "npm run build:mfe-host -- --configuration=production"
+  appBuildCommandDev: "npm run build:${{ parameters.BUILD_PREFIX_COMMAND }} -- --configuration=development"
+  appBuildCommandProd: "npm run build:${{ parameters.BUILD_PREFIX_COMMAND }} -- --configuration=production"
   tag: $(Build.BuildId)
   NPM_CACHE_FOLDER: $(Pipeline.Workspace)/.npm
   NPM_CACHE_KEYS: 'npm | "$(Agent.OS)" | package-lock.json | **/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json'
