--- a/azure-pipelines/azure-pipelines-mfe-auth.yml
+++ b/azure-pipelines/azure-pipelines-mfe-auth.yml
@@ -24,6 +24,7 @@ stages:
   - template: templates/build-template.yml
     parameters:
       stageName: build_mfe_host
+      stageDisplayName: ${{ variables.appName }}
       env:
         MS_API_URL: $(MS_API_URL)
 
