--- a/azure-pipelines/templates/variables-template.yml
+++ b/azure-pipelines/templates/variables-template.yml
@@ -22,7 +22,7 @@ variables:
   appBuildCommandDev: "npm run build:${{ parameters.BUILD_PREFIX_COMMAND }} -- --configuration=development"
   appBuildCommandProd: "npm run build:${{ parameters.BUILD_PREFIX_COMMAND }} -- --configuration=production"
   tag: $(Build.BuildId)
-  NPM_CACHE_FOLDER: $(Pipeline.Workspace)/.npm
+  NPM_CACHE_FOLDER: "$(Build.SourcesDirectory)/node_modules"
   NPM_CACHE_KEYS: 'npm | "$(Agent.OS)" | package-lock.json | **/package-lock.json, !**/node_modules/**/package-lock.json, !**/.*/**/package-lock.json'
   azureSubscription: "mfe-host"
   vmImageName: "ubuntu-latest"
