remove publish job

--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -42,17 +42,17 @@ stages:
               archiveFile: "$(Build.ArtifactStagingDirectory)/build/$(appArtifactPath)-$(Build.BuildId).zip"
               replaceExistingArchive: true
 
-      - job: publish
-        displayName: Publish ${{ parameters.stageDisplayName }}
-        dependsOn: build
-        #pool:
-        steps:
-          # Prevent checking out any source code
-          - checkout: none
+          # - job: publish
+          #   displayName: Publish ${{ parameters.stageDisplayName }}
+          #   dependsOn: build
+          #   #pool:
+          #   steps:
+          #     # Prevent checking out any source code
+          #     - checkout: none
           # Publish build artifacts
           - task: PublishBuildArtifacts@1
             displayName: Publish Build Artifacts
             inputs:
               pathtoPublish: "$(Build.ArtifactStagingDirectory)/build/$(appArtifactPath)-$(Build.BuildId).zip"
               artifactName: "drop-$(appArtifactName)"
-              publishLocation: "Container"
+              #publishLocation: "Container"
