fix paths include

--- a/azure-pipelines/azure-pipelines-mfe-auth.yml
+++ b/azure-pipelines/azure-pipelines-mfe-auth.yml
@@ -6,7 +6,7 @@ trigger:
       - fix/*
   paths:
     include:
-      - "mfe-auth/*"
+      - "projects/mfe-auth/*"
 
 variables:
   - template: templates/variables-template.yml
