add azure sucription parameter add deploy runtime stack variable

--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -16,6 +16,7 @@ variables:
       APP_ARTIFACT_PATH: "mfe-host"
       ENVIRONMENT_NAME: "mfe-host"
       BUILD_PREFIX_COMMAND: "mfe-host"
+      AZURE_SUBSCRIPTION: $(AZURE_SUBSCRIPTION)
 
 pool:
   vmImage: $(vmImageName)
@@ -34,7 +35,8 @@ stages:
   #     stageName: dev_mfe_host
   #     stageDisplayName: Dev environment ${{ variables.appName }}
 
-  # - template: templates/deploy-web-app-type-template.yml
-  #   parameters:
-  #     stageName: deploy_mfe_host
-  #     stageDisplayName: Deploy stage ${{ variables.appName }}
+  - template: templates/deploy-web-app-type-template.yml
+    parameters:
+      stageName: deploy_mfe_host
+      stageDisplayName: Deploy stage ${{ variables.appName }}
+      environmentName: "stage"
