add deploy display name variable

--- a/azure-pipelines/templates/deploy-web-app-type-template.yml
+++ b/azure-pipelines/templates/deploy-web-app-type-template.yml
@@ -5,7 +5,7 @@ stages:
     condition: succeeded()
     jobs:
       - deployment: DeployWebApp
-        displayName: Deploy
+        displayName: "Deploy $(appName)"
         environment: ${{ parameters.environmentName}}
         strategy:
           runOnce:
